name:          criterion-examples
version:       0
synopsis:      Examples for the criterion benchmarking system
description:   Examples for the criterion benchmarking system.
homepage:      https://github.com/bos/criterion
license:       BSD3
license-file:  LICENSE
author:        Bryan O'Sullivan <bos@serpentine.com>
maintainer:    Bryan O'Sullivan <bos@serpentine.com>
category:      Benchmarks
build-type:    Simple
cabal-version: >=1.8
tested-with:
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.1

executable fibber
  main-is: Fibber.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable conduit-vs-pipes
  main-is: ConduitVsPipes.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    conduit >= 1.1,
    criterion,
    pipes >= 4.1,
    transformers

executable maps
  main-is: Maps.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    bytestring,
    containers,
    critbit,
    criterion,
    deepseq,
    hashable,
    mwc-random,
    unordered-containers,
    vector,
    vector-algorithms

executable overhead
  main-is: Overhead.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable bad-read-file
  main-is: BadReadFile.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable good-read-file
  main-is: GoodReadFile.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

-- Cannot uncomment due to https://github.com/haskell/cabal/issues/1725
--
-- executable judy
--   main-is: Judy.hs
--
--   buildable: False
--   ghc-options: -Wall -rtsopts
--   build-depends:
--     base == 4.*,
--     criterion,
--     judy
