name:          criterion-examples
version:       0
synopsis:      Examples for the criterion benchmarking system
description:   Examples for the criterion benchmarking system.
homepage:      https://github.com/bos/criterion
license:       BSD3
license-file:  LICENSE
author:        Bryan O'Sullivan <bos@serpentine.com>
maintainer:    Bryan O'Sullivan <bos@serpentine.com>
category:      Benchmarks
build-type:    Simple
cabal-version: >=1.8
tested-with:
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1,
  GHCJS==8.4

flag conduit-vs-pipes
  default: True

flag maps
  default: True

executable fibber
  main-is: Fibber.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable conduit-vs-pipes
  if !flag(conduit-vs-pipes)
    buildable: False

  main-is: ConduitVsPipes.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base >= 4.8 && < 5,
    conduit >= 1.2.13.1,
    criterion,
    pipes >= 4.3.5,
    transformers

executable maps
  if !flag(maps)
    buildable: False

  main-is: Maps.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    bytestring,
    containers,
    criterion,
    deepseq,
    hashable,
    mwc-random,
    unordered-containers,
    vector,
    vector-algorithms

executable overhead
  main-is: Overhead.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion,
    criterion-measurement

executable bad-read-file
  main-is: BadReadFile.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable good-read-file
  main-is: GoodReadFile.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    criterion

executable extensible-cli
  main-is: ExtensibleCLI.hs

  ghc-options: -Wall -rtsopts
  build-depends:
    base == 4.*,
    base-compat-batteries,
    criterion,
    optparse-applicative

-- Cannot uncomment due to https://github.com/haskell/cabal/issues/1725
--
-- executable judy
--   main-is: Judy.hs
--
--   buildable: False
--   ghc-options: -Wall -rtsopts
--   build-depends:
--     base == 4.*,
--     criterion,
--     judy
